--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "@react-router/node": "^7.9.3",
     "@react-router/serve": "^7.9.3",
     "@shopify/app-bridge-react": "^4.2.4",
-"@shopify/app-bridge-utils": "^3.5.1",
+    "@shopify/app-bridge-utils": "^3.5.1",
     "@shopify/shopify-app-react-router": "^1.0.0",
     "@shopify/shopify-app-session-storage-prisma": "^7.0.0",
     "isbot": "^5.1.31",
     "prisma": "^6.16.3",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.9.3",
